@@ -1,3 +1,10 @@
+2007-08-17  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-settings-daemon.c: (initialize_modules), (start_modules),
+	(stop_modules), (finalize), (gnome_settings_daemon_init),
+	(gnome_settings_daemon_new): use a list instead of a hash table to
+	store the settings modules (closes bug #449118)
+
 2007-07-12  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-settings-xsettings.c:
